app/skins/Main/Main.css
/*
 * Document: Spit Player skin
 * Author: spit
 * Year: 2014
 */

/* Global variables*/
* {
    /* constants */
    transparent-nct: rgba(0,0,0,0.005); /* Same as `transparent`, is not click-through */

    /* fx overridden values */
    -fx-hover-base: yellow;
    -fx-pressed-base: yellow;
    -fx-outer-border: yellow;
    -fx-inner-border: yellow;
    -fx-body-color: yellow;
    -fx-mark-highlight-color: yellow;
    -fx-base: yellow;
    -fx-shadow-highlight-color: yellow;
    -fx-text-background-color: yellow;
    -fx-background-color: transparent;
    -fx-text-base-color: -skin-def-font-color;
    -fx-disabled-opacity: 0.4;
    -fx-focus-color: #ffcc66;
    -fx-faint-focus-color: #ffcc66;
    -fx-focused-mark-color: transparent;

    /* skin values */
    -skin-bgr-color: rgb(10, 10, 10);
    -skin-def-font-color: rgb(160, 160, 180);
    -skin-def-font-color-hover: #ffcc66;
    -skin-sel-font-color: rgb(175, 175, 176);
    -skin-prompt-font-color: rgba(165, 165, 165, 0.4);
    -skin-color-darker: rgba(0,0,0,0.2);
    -skin-color-lighter: rgba(180,200,255,0.08);
    -skin-pane-color: rgba(100,130,180,0.1); /* Default color for panels such as header or widget area or other areas. */
    -skin-pane-color-dragged: rgba(10,15,25,0.8); /* Darker version of pane color. By default used for :dragged pseudoclass */
    -skin-window-bgr-color: rgb(10, 10, 10); /* Window bgr color for application windows with layout content. */
    -skin-window-bgr-color-content-free: rgba(15,25,45,0.95); /* Window bgr color for windows without layout content: tooltips and popup, .etc. */
    -skin-value-font-color: rgb(75, 175, 105);
    -skin-row-fixed-size: 2em; /* size for fixed row size; affects .tree-cell > .tree-disclosure-node, .tree-table-row-cell > .tree-disclosure-node */
    -skin-row-icon-size: 1.25em; /* -glyph-size for .icon in tables, affected by -skin-row-fixed-size */
    -skin-focus-bgr-color: ladder(hsb(180, 100%, 50%), transparent 0%, -fx-focus-color 100%);
}

/******************************************************************************
 *
 *  THE APPLICATION OVERRIDES OF JAVAFX
 *
 ******************************************************************************/

.root {
    -fx-font-family: "Arial";
    -fx-font-size: 1em;
}

/* ====   TEXT NODES IN CONTROLS   ========================================== */

.text {
    -fx-bounds-type: logical_vertical_center;
    -fx-font-smoothing-type: lcd;
}

/* ====   TEXT   ============================================================ */

/* The reference for direct class !work when subclassing, hence TextFlow > * to allow TextFlow wrapping Text hack */
Shape,
Arc,
Circle,
CubicCurve,
Ellipse,
// LabeledText,  // causes problems
Line,
Path,
Polygon,
Polyline,
QuadCurve,
Rectangle,
SVGPath,
SpitText,
Text,
SpitText,
TextFlow > * {
    -fx-fill: -skin-def-font-color;
}

/* ====   BUTTON LIKE THINGS   ============================================== */

.button,
.toggle-button,
.radio-button > .radio,
.check-box > .box,
.color-picker.split-button > .color-picker-label {
    -fx-background-color: -skin-color-darker;
    -fx-border-color: red;
    -fx-border-radius: 0.5em;
    -fx-border-width: 1;
    -fx-border-insets: -1;
    -fx-text-fill: -skin-def-font-color;
    -fx-padding: 0;
    -fx-alignment: CENTER;
    -fx-content-display: LEFT;
}
.menu-button > .label {
    -fx-alignment: CENTER_LEFT;
}
.button:hover,
.toggle-button:hover,
.radio-button:hover > .radio,
.check-box:hover > .box,
.menu-button:hover,
.split-menu-button > .label:hover,
.split-menu-button > .arrow-button:hover,
/*.slider .thumb:hover,*/
.color-picker.split-button > .arrow-button:hover,
.color-picker.split-button > .color-picker-label:hover,
.tab-pane > .tab-header-area > .control-buttons-tab > .container > .tab-down-button:hover {
    -fx-background-color: -skin-color-darker;
}
.button:armed,
.toggle-button:armed,
.radio-button:armed > .radio,
.check-box:armed .box,
.menu-button:armed,
.split-menu-button:armed > .label,
.split-menu-button > .arrow-button:pressed,
.split-menu-button:showing > .arrow-button,
/*.slider .thumb:pressed,*/
/*.choice-box:showing,*/
.tab-pane > .tab-header-area > .control-buttons-tab > .container > .tab-down-button:pressed {
    -fx-background-color: -skin-color-darker;
}
.button:focused,
.toggle-button:focused,
.radio-button:focused > .radio,
.menu-button:focused,
/*.choice-box:focused,*/
.color-picker.split-button:focused > .color-picker-label{
    -fx-background-color: -skin-color-darker;
}

/* TODO: generalize to BUTTON-LIKE THINGS */
.button,
.button:hover,
.button:focused {
    -fx-label-padding: 0 0.2em 0 0.2em;
    -fx-background-color: null;
    -fx-border-color: -skin-def-font-color;
    -fx-border-width: 0.08em;
    -fx-border-radius: 0.2em;
    -fx-effect: null;
}
.button:hover {
    -fx-background-color: -skin-focus-bgr-color;
}
.button:focused {
    -fx-text-fill: -fx-focus-color;
    -fx-border-color: -fx-focus-color;
}

.toggle-button,
.toggle-button:hover,
.toggle-button:focused {
    -fx-border-color: transparent;
    -fx-border-width: 0;
    -fx-border-insets: 0;
    -fx-background-color: transparent, transparent, transparent, transparent;
    -fx-background-insets: 0 0 -1 0, 0, 1, 2;
    -fx-background-radius: 3px, 3px, 2px, 1px;
    -fx-padding: 0.5em 0.666667em 0.5em 0.666667em; /* 6 8 6 8 */
    -fx-text-fill: -fx-text-base-color;
    -fx-alignment: CENTER;
    -fx-content-display: LEFT;
}
.toggle-button:focused {
    -fx-background-color: transparent, transparent, transparent, transparent;
    -fx-background-insets: -0.2, 1, 2, -1.4, 2.6;
    -fx-background-radius: 3, 2, 1, 4, 1;
    -fx-text-fill: -fx-text-base-color;
}
.toggle-button:hover,
.toggle-button:hover:selected,
.toggle-button:hover:focused,
.toggle-button:hover:focused:selected {
    -fx-background-color: transparent, transparent, transparent, transparent;
}
/* ... */

